# project-polaris

./: .gitignore  CMakeLists.txt  README.md
include/project-polaris/: animation.hpp  app.hpp  comp_filter.hpp  complemetary_filter.hpp  csv_reader.hpp  gui.hpp  imgui_vtk_demo.h  imgui_vtk_demo.hpp  madgwick_filter.hpp  main.hpp  metrics.hpp  naive_filter.hpp  quaternion.hpp  vec3.hpp  vtk_actor_generator.hpp  vtk_viewer.hpp
results/: e.csv  error_comp_mag.csv  error_comp_no_mag.csv  error_madg_mag.csv  error_madg_no_mag.csv  est_comp_mag.csv  est_comp_no_mag.csv  est_madg_mag.csv  est_madg_no_mag.csv  euler_diff.csv  quat_err.csv
src/: VtkViewer.cpp  app.cpp  comp_filter.cpp  complemetary_filter.cpp  csv_reader.cpp  gui.cpp  madgwick_filter.cpp  main.cpp  naive_filter.cpp  vtk_viewer.cpp
test_data/: imu_acc.csv  imu_acc_.csv  imu_acc_enu.csv  imu_gyr.csv  imu_gyr_.csv  imu_gyr_enu.csv  imu_mag.csv  opt_quat.csv  time.csv
test_data/out_test_data/_286_0.200000_0.200000_10000_45000/: error_comp_mag.csv  error_comp_no_mag.csv  error_madg_mag.csv  error_madg_no_mag.csv  est_comp_mag.csv
test_data/out_test_data/_286_0.510000_0.200000_10000_45000/: error_comp_mag.csv  error_comp_no_mag.csv  est_comp_mag.csv  est_comp_no_mag.csv  est_madg_mag.csv  est_madg_no_mag.csv
